chore: add macro

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+extra_configs = config/secret.ini
+
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
@@ -16,6 +19,9 @@ monitor_speed = 115200
 build_flags = 
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
+    -D WIFI_SSID=\"${secret.wifi_ssid}\"
+    -D WIFI_PASSWORD=\"${secret.wifi_password}\"
+    -D HTTP_TOKEN=\"${secret.http_token}\"
 lib_deps = 
 	espressif/esp32-camera@^2.0.4
 	mathieucarbou/ESPAsyncWebServer@^3.3.23
