--- a/config/secret.example.ini
+++ b/config/secret.example.ini
@@ -1,6 +1,4 @@
 [secret]
-
-wifi_ssid = CHANGE_ME_TO_THE_REAL_SSID
-wifi_password = CHANGE_ME_TO_THE_REAL_WIFI_PASSWORD
-
-http_token = CHANGE_ME_TO_A_HARD_PASSWORD
+wifi_ssid="CHANGE_ME_TO_THE_REAL_SSID"
+wifi_password="CHANGE_ME_TO_THE_REAL_WIFI_PASSWORD"
+http_token="CHANGE_ME_TO_A_HARD_PASSWORD"
